spring-payments/spring-payments-v2.0/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-payments-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      name: spring-payments
  replicas: 4 # tells deployment to run 2 pods matching the template
  template: # create pods using pod definition in this template
    metadata:
      # unlike pod.yaml, the name is not included in the meta data as a unique name is
      # generated from the deployment name
      labels:
        name: spring-payments
    spec:
      containers:
      - name: spring-payments
        image: paulnguyen/spring-payments:v2.0
        ports:
        - containerPort: 8080
