spring-payments/spring-payments-v2.0/ingress.yaml
apiVersion: "extensions/v1beta1"
kind: "Ingress"
metadata:
  name: "spring-payments-ingress"
  namespace: "default"
spec:
  backend:
    serviceName: "spring-payments-service"
    servicePort: 8080
